Fixed some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ html, body, .wrapper {
 	margin-left: 30px;
 	margin-right: 30px;
 	font-size: 2em;
+	font-weight: bold;
 	margin-left: 0px;
 	margin-bottom: 20px;
 	width: 100%;
